<resources>

    <string name="app_name">SpeedTrap</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_start_speed_trap">SpeedTrap</string>
    <string name="uparrow">&#8593;</string>
    <string name="downarrow">&#8595;</string>
    <string name="arrow">&#8597;</string>
    <string name="Level">Level</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="onlycontainalphanumeric"> must contain only alphanumeric characters </string>
    <string name="onlyalphabets"> must contain only alphabets </string>
    <string name="please_wait">Please wait..</string>
    <string name="allfieldsrequired">All fields are mandatory</string>
    <string name="usernamealready">Email already exists</string>
    <string name="validemail">Email is not valid</string>
    <string name="emailusernamenotvalid">email / username not valid.</string>
    <string name="nonet">Internet is not available - please try later.</string>
    <string name="servername">http://speed-trap-app.com/sp_json.php?</string>
<!--     <string name="servername">http://speedtrap.entwickler-php.com/sp_json.php?</string> -->
<!--     <string name="servername">http://speedtrap.abookwormsblog.com/sp_json.php?</string> -->
<!--     <string name="servername">http://10.42.44.7/speedtrap/localhost/sp_json.php?</string> -->
    <string name="existingAccount">Sign in with existing account</string>
    <string name="iamanewuser">I am a new user</string>
    <string name="emailadd">Email address</string>
    <string name="iaccepttermsofuse">I accept the Terms of Use</string>
    <string name="touchthearrow">Touch the arrow to report a speed trap</string>
    <string name="mobilespeedtrap">Mobile speed trap</string>
    <string name="fixedspeedtrap">Fixed speed trap</string>
    <string name="trafficlighttrap">Traffic light trap</string>
    <string name="direction">Direction</string>
    <string name="seethespeedtrap">Did you see the speed trap?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="willwarn">This app will warn you when you approach:</string>
    <string name="appOne">A fixed speed trap</string>
    <string name="appTwo">A speed trap that has been reported or confirmed within the last 2 hours</string>
    <string name="appThree">A spot where speed traps have been reported regularly.</string>
    <string name="plhelpothers">Please help other users by reporting speed traps when you see them.</string>
    <string name="threeeasyseps">There are just three easy steps.</string>
    <string name="stepOne">Touch the arrow when you see a speed trap.</string>
    <string name="stepTwo">Touch the button that indicates which kind you have seen. Either a mobile speed trap, a fixed speed trap or a red lights trap.</string>
    <string name="stepThree">Touch the button that states the direction in which the camera was registering the speed.</string>
	<string name="drivecarefully">Please drive carefully!</string>
    <string name="speeding">Speeding is dangerous!</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="termsofuse">Terms of use</string>
    <string name="settings">Settings</string>
    <string name="warningpossible">Warning for possible speed traps.</string>
    <string name="appgreatadv">One of Speed Trap APP\'s great advantages is that it can predict where there is a high risk of running into a speed trap.</string>
    <string name="turnon">By turning this on you will have more false warnings, but in our opinion it is better to be safe than sorry.</string>    
    <string name="recommendFriends">Help us improve - recommend us to your friends.</string>
    <string name="facebookPost">is avoiding speeding tickets with a free app from Speed Trap App.</string>
    <string-array name="language_arrays">
        <item>English</item>
        <item>dansk</item>
        <item>español</item>
        <item>français</item>
        <item>Deutsch</item>
    </string-array>

</resources>