<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/app_background_dark"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="60dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/willwarn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/willwarn"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dip" >

                <!-- <TextView -->
                <!-- android:layout_width="fill_parent" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:gravity="center_vertical" -->
                <!-- android:text="1. " -->
                <!-- android:textColor="#ffffff" -->
                <!-- android:textSize="14dp" /> -->

                <TextView
                    android:id="@+id/appOne"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/appOne"
                    android:textColor="#ffffff"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" >

                <!-- <TextView -->
                <!-- android:layout_width="fill_parent" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:gravity="center_vertical" -->
                <!-- android:text="2. " -->
                <!-- android:textColor="#ffffff" -->
                <!-- android:textSize="14dp" /> -->

                <TextView
                    android:id="@+id/appTwo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/appTwo"
                    android:textColor="#ffffff"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" >

                <!-- <TextView -->
                <!-- android:layout_width="fill_parent" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:gravity="center_vertical" -->
                <!-- android:text="3. " -->
                <!-- android:textColor="#ffffff" -->
                <!-- android:textSize="14dp" /> -->

                <TextView
                    android:id="@+id/appThree"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/appThree"
                    android:textColor="#ffffff"
                    android:textSize="14dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/plhelpothers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:gravity="center"
                android:text="@string/plhelpothers"
                android:textColor="#ffffff"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/threeeasyseps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/threeeasyseps"
                android:textColor="#ffffff"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center" >

                <!-- <TextView -->
                <!-- android:layout_width="fill_parent" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:gravity="center_vertical" -->
                <!-- android:text="1. " -->
                <!-- android:textColor="#ffffff" -->
                <!-- android:textSize="14dp" /> -->

                <TextView
                    android:id="@+id/stepOne"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/stepOne"
                    android:textColor="#ffffff"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" >

                <!-- <TextView -->
                <!-- android:layout_width="fill_parent" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:gravity="center_vertical" -->
                <!-- android:text="2. " -->
                <!-- android:textColor="#ffffff" -->
                <!-- android:textSize="14dp" /> -->

                <TextView
                    android:id="@+id/stepTwo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/stepTwo"
                    android:textColor="#ffffff"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" >

                <!-- <TextView -->
                <!-- android:layout_width="fill_parent" -->
                <!-- android:layout_height="wrap_content" -->
                <!-- android:gravity="center_vertical" -->
                <!-- android:text="3. " -->
                <!-- android:textColor="#ffffff" -->
                <!-- android:textSize="14dp" /> -->

                <TextView
                    android:id="@+id/stepThree"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/stepThree"
                    android:textColor="#ffffff"
                    android:textSize="14dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/drivecarefully"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/drivecarefully"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/speeding"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/speeding"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dip" >

                <TextView
                    android:id="@+id/termsofuse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/termsofuse"
                    android:textColor="#ffffff"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/privacypolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/privacypolicy"
                    android:textColor="#ffffff"
                    android:textSize="14dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="horizontal" >

        <com.google.ads.AdView
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="a150efb47ba23a0"
            ads:loadAdOnCreate="true" />
    </LinearLayout>

</LinearLayout>