<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_dark"    
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
	<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/txtSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="#ffffff"
        android:textSize="24dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/warningpossible"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/warningpossible"
        android:textColor="#ffffff"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/appgreatadv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/appgreatadv"
        android:textColor="#ffffff"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/turnon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/turnon"
        android:textColor="#ffffff"
        android:textSize="14dp" />

    <!-- <LinearLayout -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:gravity="right" -->
    <!-- android:orientation="vertical" > -->


<ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bgtoggle"
        android:button="@null"
        android:textOff=""
        android:textOn="" />


<!--     <ToggleButton -->
<!--         android:id="@+id/toggleButton" -->
<!--         android:layout_width="100dp" -->
<!--         android:layout_height="70dp" -->
<!--         android:layout_marginLeft="20dp" -->
<!--         android:layout_marginRight="20dp" -->
<!--         android:layout_marginTop="20dp" -->
<!--         android:gravity="center" -->
<!--         android:text="ToggleButton" /> -->
    <!-- </LinearLayout> -->

    <TextView
        android:id="@+id/recommendFriends"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/recommendFriends"
        android:textColor="#ffffff"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/btnFB"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/socialmedia_fb" />

        <ImageView
            android:id="@+id/btnTw"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/socialmedia_twt" />
    </LinearLayout>
    
	</LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="horizontal" >
        <com.google.ads.AdView
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="a150efb47ba23a0"
            ads:loadAdOnCreate="true" />
    </LinearLayout> 
</LinearLayout>