<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/seethespeedtrap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_weight="0.33" 
        android:gravity="center_horizontal|bottom"
        android:layout_marginBottom="30dp"
        android:text="@string/seethespeedtrap"
        android:textColor="#ffffff"
        android:textSize="34dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.67"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="#ffffff"
            android:textSize="24dp" 
            android:textStyle="bold"
            android:background="@drawable/btn_green"/>

        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="#ffffff"
            android:textSize="24dp" 
            android:textStyle="bold"
            android:background="@drawable/btn_red"/>
    </LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
        <com.google.ads.AdView
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="a150efb47ba23a0"
            ads:loadAdOnCreate="true" />
    </LinearLayout>
</LinearLayout>