<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:background="@drawable/app_background" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo_st" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="141dp" 
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/signup_box"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edFirstName"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#00000000"
            android:hint="@string/firstname"
            android:singleLine="true"
            android:textColor="#9d988d"
            android:textSize="17dip"
            android:textStyle="bold" >
        </EditText>

        <EditText
            android:id="@+id/edLastName"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#00000000"
            android:hint="@string/lastname"
            android:singleLine="true"
            android:textColor="#9d988d"
            android:textSize="17dip"
            android:textStyle="bold" >
        </EditText>
		<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
		    <EditText
            android:id="@+id/edEmail"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="44dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#00000000"
            android:hint="@string/emailadd"
            android:singleLine="true"
            android:textColor="#9d988d"
            android:textSize="17dip"
            android:textStyle="bold" >
        </EditText>
        <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:indeterminate="true"
                    android:visibility="gone"
                    />
		</LinearLayout>
        

        <!-- <EditText -->
        <!-- android:id="@+id/edUserName" -->
        <!-- android:layout_width="fill_parent" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_marginLeft="20dp" -->
        <!-- android:layout_marginRight="20dp" -->
        <!-- android:hint="@string/username" -->
        <!-- android:singleLine="true" -->
        <!-- android:textSize="20dip" > -->
        <!-- </EditText> -->

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="fill_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#00000000"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#9d988d"
            android:textSize="17dip"
            android:textStyle="bold" >
        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_gravity="center">

            <CheckBox
                android:id="@+id/chkAccept"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:gravity="center"
                android:text="" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:text="@string/iaccepttermsofuse"
                android:textColor="#373737"
                android:textSize="15dip"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/signUp"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="Sign up"
            android:textColor="#f1e7cc"
            android:textSize="17dip"
            android:textStyle="bold" />
    </LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
        <com.google.ads.AdView
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="a150efb47ba23a0"
            ads:loadAdOnCreate="true" />
    </LinearLayout>
    
</RelativeLayout>